# svelte-tide-project

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rollup.config.js
public/: global.css  index.html
src/: main.rs  routes.rs
src/middleware/: mod.rs  usersecure.rs
src/routes/: auth.rs  mod.rs  secure.rs
src_front/: App.svelte
src_front/component/: Navbar.svelte
src_front/pages/: Login.svelte  Logout.svelte  Secure.svelte
