[package]
name = "svelte-tide-project"
version = "0.1.0"
authors = ["Jasmin Bertovic <jas@bertovic.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16"
async-std = { version = "1.10.0", features = ["attributes"] }
serde = "1.0"